# wikimedia-toolhub

./: .dockerignore  .flake8  .gitignore  .gitreview  .jsonschema-tools.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vue.config.js
.pipeline/: blubber.yaml  config.yaml  demo.Dockerfile  dev-nodejs.Dockerfile  local-python.Dockerfile  oauth-client.Dockerfile
contrib/cronjob/: crawler.sh
contrib/demo-server/: Makefile  README.md  docker-compose.yaml  toolhub.service
contrib/oauth-client-example/: README.md  app.py  config.py  docker-compose.oauth.yaml  pyproject.toml
contrib/oauth-client-example/templates/: home.html
contrib/prometheus/: README.md  docker-compose.prometheus.yaml  prometheus.yml  toolhub.rules
contrib/prometheus/consoles/: toolhub.html
docs/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  conf.py  index.rst  packages.rst  toolinfo.rst
docs/_static/css/: custom.css
jsonschema/toolinfo/: .gitignore  1.0.0.json  1.0.0.yaml  1.1.1.json  1.1.1.yaml  1.2.0.json  1.2.0.yaml  1.2.1.json  1.2.2.json  CHANGELOG.rst  current.yaml
static/css/: oauth.css
tests/jsonschema/: repository.test.js
toolhub/: admin.py  decorators.py  fields.py  logging.py  middleware.py  oauth.py  openapi.py  pagination.py  permissions.py  routers.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
toolhub/api/: apps.py  decorators.py  routers.py  serializers.py  urls.py  views.py
toolhub/api/serializers/: crawler.py  user.py
toolhub/api/tests/: test_apps.py
toolhub/api/views/: crawler.py  user.py
toolhub/apps/api/: apps.py  permissions.py  urls.py
toolhub/apps/api/serializers/: crawler.py  user.py
toolhub/apps/api/tests/: test_apps.py
toolhub/apps/api/views/: crawler.py  user.py
toolhub/apps/auditlog/: admin.py  apps.py  context.py  middleware.py  models.py  schema.py  serializers.py  signals.py  views.py
toolhub/apps/auditlog/migrations/: 0001_initial.py  0002_rename_action_time_to_timestamp.py  0003_action_tense_change.py  0004_add_hide_reveal.py  0005_add_params.py  0006_backfill_params.py  0007_featured_actions.py
toolhub/apps/auditlog/tests/: test_apps.py  test_context.py  test_middleware.py  test_models.py
toolhub/apps/crawler/: admin.py  apps.py  logging.py  models.py  serializers.py  tasks.py  views.py
toolhub/apps/crawler/migrations/: 0001_initial.py  0003_crawler_runs.py  0004_rename_crawledurl_to_url.py  0005_rename_crawlerrun_to_run.py  0006_remove_modified_from_url.py  0007_run_add_counters.py  0008_T274018_timestamps.py  0009_runurl_logs.py  0010_auto_20211216_0847.py
toolhub/apps/crawler/tests/: crawler_happy_path.json  crawler_missing_run_1.json  crawler_missing_run_2.json  test_apps.py  test_logging.py  test_models.py  test_tasks.py  test_views.py
toolhub/apps/lists/: admin.py  apps.py  models.py  serializers.py  validators.py  views.py
toolhub/apps/lists/migrations/: 0001_initial.py  0002_add_tool_names.py  0003_constraints.py
toolhub/apps/lists/tests/: test_views.py  toolinfo_fixture.json
toolhub/apps/oauth2/: apps.py  serializers.py  urls.py  views.py
toolhub/apps/oauth2/tests/: test_views.py
toolhub/apps/search/: apps.py  documents.py  models.py  schema.py  serializers.py  signals.py  views.py
toolhub/apps/toolinfo/: admin.py  apps.py  documents.py  generate_spdx.py  models.py  schema.py  schema2model.py  serializers.py  spdx.py  utils.py  validators.py  views.py
toolhub/apps/toolinfo/migrations/: 0001_initial.py  0002_keywords_to_jsonfield.py  0003_track_tool_origin.py  0004_jsonschemafield.py  0005_monkey_patch_reversion.py  0006_spdx_validator.py  0007_fix_icon_validation.py  0008_T274018_timestamps.py  0009_url_validation_rules.py  0010_tool_deleted.py  0011_blankasnull.py  0012_language_validators.py  0013_update_help_text.py  0014_auto_20211125_1403.py  0017_annotations.py  (+6 more)
toolhub/apps/user/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
toolhub/apps/versioned/: apps.py  context.py  exceptions.py  models.py  schema.py  serializers.py  views.py
toolhub/crawler/: apps.py
toolhub/crawler/migrations/: 0002_auto_20201027_0018.py
toolhub/crawler/tests/: test_apps.py
toolhub/fixtures/: demo.yaml
toolhub/templates/oauth2_provider/: authorize.html  base.html
toolhub/tests/: __init__.py  test_fields.py  test_oauth.py  test_openapi.py  test_permissions.py  test_views.py  testcases.py
toolhub/user/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
toolhub/user/migrations/: 0001_initial.py
vue/: apps.py  serializers.py  tests.py  urls.py  views.py
vue/public/: index.html
vue/src/: App.vue  main.js  utils.spec.js
vue/src/helpers/: array.js  array.spec.js  casl.js  casl.spec.js  diff.js  diff.spec.js  metadata.js  metadata.spec.js  notifications.js  notifications.spec.js  object.js  object.spec.js  tools.js  tools.spec.js  validation.js  validation.spec.js
vue/src/plugins/: i18n-fallback.js  i18n.js  pattern-regex.js  pattern-regex.spec.js  sort.js  swagger.js  swagger.spec.js  url-regex.js  vuetify.js
vue/src/router/: index.js  index.spec.js
vue/src/store/: api.js  api.spec.js  auditlogs.js  auditlogs.spec.js  crawler.js  crawler.spec.js  favorites.js  favorites.spec.js  groups.js  groups.spec.js  index.js  lists.js  lists.spec.js  locale.js  locale.spec.js  oauth.js  oauth.spec.js  recentchanges.js  recentchanges.spec.js  search.js  search.spec.js  tools.js  tools.spec.js  ui.js  ui.spec.js  user.js  user.spec.js
vue/src/views/: About.vue  AddRemoveTools.vue  ApiDocs.vue  AuditLogs.vue  CrawlerHistory.vue  DeveloperSettings.vue  EditTool.vue  EditToolOrAnnotations.vue  Favorites.vue  Home.vue  ListHistory.vue  ListRevisionsDiff.vue  ListView.vue  Lists.vue  Members.vue  MyLists.vue  PublishedLists.vue  RecentChanges.vue  RevisionsDiff.vue  Search.vue  Tool.vue  ToolHistory.vue  ToolRevisionsDiff.vue  ToolView.vue
vue/static/vue/: .gitignore
vue/templates/vue/: base.html  main.html
(+170 files in other folders)
