[tool.poetry]
name = "oauth-client-example"
version = "0.1.0"
description = "Trivial OAuth client for Toolhub"
authors = ["Bryan Davis <bd808@wikimedia.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
Authlib = "^0.15.4"
requests = "^2.26.0"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
